// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChipQuestionnaireStatus /> component it should render label {"background": "#F5F5F5", "label": "Un Submitted", "status": "USER_NOTIFICATION_QUESTIONNAIRE_STATUS_UNANSWERED"} and background color %p when status is %p 1`] = `
.emotion-0 {
  max-width: 100%;
  font-family: Roboto,sans-serif;
  font-size: 0.8125rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  height: 24px;
  color: #212121;
  background-color: #EBEBEB;
  border-radius: 16px;
  white-space: nowrap;
  -webkit-transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  cursor: default;
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0;
  padding: 0;
  vertical-align: middle;
  box-sizing: border-box;
  color: rgba(0, 0, 0, 0.87);
  background-color: #E0E0E0;
  background: #F5F5F5;
  color: #757575;
}

.emotion-0.Mui-disabled {
  opacity: 0.38;
  pointer-events: none;
}

.emotion-0 .MuiChip-avatar {
  margin-left: 5px;
  margin-right: -6px;
  width: 24px;
  height: 24px;
  color: #616161;
  font-size: 0.75rem;
}

.emotion-0 .MuiChip-avatarColorPrimary {
  color: #fff;
  background-color: #0B79D0;
}

.emotion-0 .MuiChip-avatarColorSecondary {
  color: #fff;
  background-color: #BE134D;
}

.emotion-0 .MuiChip-avatarSmall {
  margin-left: 4px;
  margin-right: -4px;
  width: 18px;
  height: 18px;
  font-size: 0.625rem;
}

.emotion-0 .MuiChip-icon {
  color: #616161;
  margin-left: 4px;
  margin-right: -4px;
  font-size: 18px;
}

.emotion-0 .MuiChip-deleteIcon {
  -webkit-tap-highlight-color: transparent;
  color: rgba(33, 33, 33, 0.26);
  font-size: 16px;
  cursor: pointer;
  margin: 0 5px 0 -6px;
  margin-right: 4px;
  margin-left: -4px;
}

.emotion-0 .MuiChip-deleteIcon:hover {
  color: rgba(33, 33, 33, 0.4);
}

.emotion-1 {
  overflow: hidden;
  text-overflow: ellipsis;
  padding-left: 8px;
  padding-right: 8px;
  white-space: nowrap;
}

<div>
  <div
    class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault emotion-0"
    data-testid="ChipQuestionnaireStatus"
  >
    <span
      class="MuiChip-label MuiChip-labelSmall emotion-1"
    >
      Un Submitted
    </span>
  </div>
</div>
`;

exports[`<ChipQuestionnaireStatus /> component it should render label {"background": "linear-gradient(0deg, rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)), #4CAF50", "label": "Submitted", "status": "USER_NOTIFICATION_QUESTIONNAIRE_STATUS_ANSWERED"} and background color %p when status is %p 1`] = `
.emotion-0 {
  max-width: 100%;
  font-family: Roboto,sans-serif;
  font-size: 0.8125rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  height: 24px;
  color: #212121;
  background-color: #EBEBEB;
  border-radius: 16px;
  white-space: nowrap;
  -webkit-transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  cursor: default;
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0;
  padding: 0;
  vertical-align: middle;
  box-sizing: border-box;
  color: rgba(0, 0, 0, 0.87);
  background-color: #E0E0E0;
  background: linear-gradient(0deg, rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)),#4CAF50;
  color: #3B873E;
}

.emotion-0.Mui-disabled {
  opacity: 0.38;
  pointer-events: none;
}

.emotion-0 .MuiChip-avatar {
  margin-left: 5px;
  margin-right: -6px;
  width: 24px;
  height: 24px;
  color: #616161;
  font-size: 0.75rem;
}

.emotion-0 .MuiChip-avatarColorPrimary {
  color: #fff;
  background-color: #0B79D0;
}

.emotion-0 .MuiChip-avatarColorSecondary {
  color: #fff;
  background-color: #BE134D;
}

.emotion-0 .MuiChip-avatarSmall {
  margin-left: 4px;
  margin-right: -4px;
  width: 18px;
  height: 18px;
  font-size: 0.625rem;
}

.emotion-0 .MuiChip-icon {
  color: #616161;
  margin-left: 4px;
  margin-right: -4px;
  font-size: 18px;
}

.emotion-0 .MuiChip-deleteIcon {
  -webkit-tap-highlight-color: transparent;
  color: rgba(33, 33, 33, 0.26);
  font-size: 16px;
  cursor: pointer;
  margin: 0 5px 0 -6px;
  margin-right: 4px;
  margin-left: -4px;
}

.emotion-0 .MuiChip-deleteIcon:hover {
  color: rgba(33, 33, 33, 0.4);
}

.emotion-1 {
  overflow: hidden;
  text-overflow: ellipsis;
  padding-left: 8px;
  padding-right: 8px;
  white-space: nowrap;
}

<div>
  <div
    class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault emotion-0"
    data-testid="ChipQuestionnaireStatus"
  >
    <span
      class="MuiChip-label MuiChip-labelSmall emotion-1"
    >
      Submitted
    </span>
  </div>
</div>
`;
